--- a/Сайтик/index.html
+++ b/Сайтик/index.html
@@ -15,7 +15,7 @@
       <img src="images/01.png" class="overlay-image overlay-0">
       <div class="container">
           <div class="header">
-            <div class=" medium_21">Сладкий сундук</div>
+            <div class="logo medium_21">Сладкий сундук</div>
             <div class="header_info">
             <div class="header__location regular_12">
               <img src="images/location.svg">
