--- a/Сайтик/index.html
+++ b/Сайтик/index.html
@@ -200,7 +200,7 @@
       <img src="images/phone-mockup.png" class="overlay-image mockup">
       <img src="images/cloud-top-order.png" class="overlay-image overlay-8">
       <img src="images/cloud-bottom-order.png" class="overlay-image overlay-9">
-      <div class="container">
+      <div class="container_3">
       <div class="block3">
         <div class="block3_content">
           <div class="hero_text">
